--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [
     "clipboard",
@@ -19,5 +20,5 @@
     "src",
     "dist"
   ],
-  "types": "src/clipboard.ts"
+  "types": "dist/clipboard.d.ts"
 }
