feature: 增加仓库地址

--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "copy"
   ],
   "author": "kunping",
-  "license": "ISC",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/linbeigreat/clipboard.git"
+  },
   "files": [
     "src",
     "dist"
